Fix for overlapping images. Using imagesloaded script

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ html, body {
   margin: 30px auto; }
 
 .grid-item {
-  width: 400px;
+  width: 25%;
   margin: 2px auto; }
 
 .grid-item img {
